<resources>
    <string name="app_name">Toddlearn</string>
    <string name ="activity_register_title">REGISTRATION</string>
    <string name= "email_title">Email</string>
    <string name= "child_name_title">Child name</string>
    <string name = "password_title">Password</string>
    <string name = "confirm_password_title">Confirm password</string>
    <string name = "agree_terms">I agree with the terms</string>
    <string name = "register_title_button">Register </string>
    <string name = "settings_title_button">Settings</string>
    <string name = "activity_settings_title">SETTINGS</string>
    <string name = "changed_title_button">Change personal data</string>
    <string name = "limit_time_title">LIMIT TIME</string>
    <string name = "time_default">15</string>
    <string name="check_progress_title_button">Check kid progress</string>
    <string name="progress_title">PROGRESS</string>
    <string name="report_button_title">Send me a report</string>
    <string name="average_time_title">AVERAGE PLAYING TIME</string>
    <string name="game1_graph_title">GAME 1</string>
    <string name="game2_graph_title">GAME 2</string>
    <string name="data_change_title">CHANGE DATA</string>
    <string name="password_title_button">Password</string>
    <string name="apply_title_button">Apply changes</string>
    <string name="change_password_title">CHANGE PASSWORD</string>
    <string name ="current_password_title">Current password</string>
    <string name="new_password_title">New password</string>
    <string name="login_arrow">➝</string>
    <string name="register_message_1">If you do not have account</string>
    <string name="register_message_2">press here</string>
    <string name="title_game_popup">BEFORE START THE FUN... </string>
</resources>
