<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".ChildProgressActivity">

    <TextView
        android:id="@+id/childProgressTextView"
        android:layout_width="346dp"
        android:layout_height="65dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="33dp"
        android:layout_marginRight="33dp"
        android:background="@drawable/titles_background"
        android:fontFamily="@font/montserrat"
        android:text="@string/progress_title"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="50dp"
        android:layout_height="58dp"
        android:layout_marginStart="45dp"
        android:layout_marginLeft="45dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintBottom_toTopOf="@+id/averageTitle"
        app:layout_constraintEnd_toStartOf="@+id/childNameTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/childProgressTextView"
        app:srcCompat="@drawable/baby_icon" />

    <TextView
        android:id="@+id/childNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="27dp"
        android:layout_marginRight="27dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/child_name_title"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/averageTitle"
        app:layout_constraintEnd_toStartOf="@+id/report_button"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/childProgressTextView" />

    <Button
        android:id="@+id/report_button"
        android:layout_width="111dp"
        android:layout_height="53dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="45dp"
        android:layout_marginRight="45dp"
        android:background="@drawable/custom_button"
        android:fontFamily="@font/montserrat"
        android:text="@string/report_button_title"
        android:textColor="@color/Titles"
        app:layout_constraintBottom_toTopOf="@+id/averageTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/childNameTextView"
        app:layout_constraintTop_toBottomOf="@+id/childProgressTextView" />

    <TextView
        android:id="@+id/averageTitle"
        android:layout_width="296dp"
        android:layout_height="25dp"
        android:layout_marginStart="45dp"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="45dp"
        android:layout_marginRight="45dp"
        android:background="@drawable/background_subtitles_gradient3"
        android:text="@string/average_time_title"
        android:textAlignment="center"
        android:textColor="@color/Titles"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/barChar_playingTime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/report_button" />

    <com.github.mikephil.charting.charts.BarChart
        android:id="@+id/barChar_playingTime"
        android:layout_width="162dp"
        android:layout_height="217dp"
        android:layout_marginStart="102dp"
        android:layout_marginLeft="102dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="147dp"
        android:layout_marginRight="147dp"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/averageTitle" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="118dp"
        android:layout_height="21dp"
        android:layout_marginStart="42dp"
        android:layout_marginLeft="42dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="42dp"
        android:layout_marginRight="42dp"
        android:background="@drawable/background_subtitles_gradient2"
        android:text="@string/game1_graph_title"
        android:textAlignment="center"
        android:textColor="@color/Titles"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/barChar_game1"
        app:layout_constraintEnd_toStartOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/barChar_playingTime" />

    <com.github.mikephil.charting.charts.BarChart
        android:id="@+id/barChar_game1"
        android:layout_width="131dp"
        android:layout_height="185dp"
        android:layout_marginStart="49dp"
        android:layout_marginLeft="49dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="42dp"
        android:layout_marginRight="42dp"
        app:layout_constraintEnd_toStartOf="@+id/barChar_game2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="118dp"
        android:layout_height="21dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="51dp"
        android:layout_marginRight="51dp"
        android:background="@drawable/background_subtitles_gradient"
        android:text="@string/game2_graph_title"
        android:textAlignment="center"
        android:textColor="@color/Titles"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/barChar_game2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/barChar_playingTime" />

    <com.github.mikephil.charting.charts.BarChart
        android:id="@+id/barChar_game2"
        android:layout_width="131dp"
        android:layout_height="185dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="49dp"
        android:layout_marginRight="49dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/barChar_game1"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <Button
        android:onClick="goBack"
        android:id="@+id/return_button_progress"
        android:layout_width="75dp"
        android:layout_height="63dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="320dp"
        android:layout_marginRight="320dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/return_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/barChar_game1" />
</androidx.constraintlayout.widget.ConstraintLayout>